<package format="2">
  <name>demo_talker_listener</name>
  <version>0.0.1</version>
  <description>The demo_talker_listener package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export></export>
</package>

